--- a/landing-page-dicoding/index.html
+++ b/landing-page-dicoding/index.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    
     <header class="navbar-container">
         <div class="logo">
             <img src="img/dicoding-header-logo.png" alt="Dicoding Indonesia">
@@ -24,5 +27,31 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <div class="content">
+            <div class="content-description">
+                <h1 class="title">Dicoding Indonesia</h1>
+                <p>Kami yakin pendidikan teknologi adalah fondasi bagi setiap bangsa agar menjadi yang
+                    terdepan dalam menghadapi dunia digital. Dicoding hadir sebagai platform pendidikan
+                    teknologi yang membantu menghasilkan talenta digital berstandar global. Semua demi
+                    mengakselerasi Indonesia agar menjadi yang terdepan.</p>
+                <button>Lebih Lanjut</button>
+            </div>
+            <div class="content-image">
+                <img src="img/circle-g.jpg" alt="Dicoding Indonesia">
+            </div>
+        </div>
+        <aside>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
+        </aside>
+    </main>
 </body>
 </html>
